# genes_visual_analytics

./: .gitignore  README.md  main.py  requirements.txt  requirements_macos.txt  theme.yaml  times.csv
back/: pyproject.toml
back/api/: settings.py  urls.py
back/pages/: urls.py  views.py
db/: __init__.py  setup.py  tcga_datasets_index.json  tcga_datasets_index_test.json
db/datasets/: datasets_downloader.py
db/local_client/: chroma.sqlite3
flask_api/: .gitignore  pyproject.toml
flask_api/api/: router.py
flask_api/db/: handler.py  setup.py  setup_old.py
flask_api/db/datasets/: datasetmaker_genexpresion.py
nlp_ms/: .gitignore  app.py  election.txt  main.py  requirements.txt
server/: .gitignore  app.py  main.py  pyproject.toml  requirements.txt
server/api/: __init__.py  exampl.py  router.py
server/db/: handler.py  setup.py  times.csv
server/db/datasets/: custom_dataset_summary.csv  datasetmaker.py  datasetmaker_genexpresion.py  (+1 more)
server/templates/: brushing.html  index.html  searcher.html
static/css/: fonts.css
templates/: index.html
utils/: __init__.py  data_helper.py  plots_helper.py  tools_helper.py  widgets_helper.py
ux/: .gitignore  app.vue  i18n.config.ts  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
ux/components/: Navigation.vue  SideNavigation.vue  TopNavigation.vue
ux/composables/: index.ts  useEventBus.ts  useTransform.ts
ux/layouts/: global.css
ux/locales/: en.json  es.json
ux/pages/: configuration.vue  graphs.vue  index.vue  searcher.vue
ux/plugins/: bokehjs.client.ts
ux/types/: genCard.ts
(+7 files in other folders)
