[tool.poetry]
name = "chromagens backend"
version = "0.1.0"
description = "Backend aplication for chromagens"
authors = ["Manuel Arroyo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = ">=3.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
