[tool.poetry]
name = "flask-api"
version = "0.1.0"
description = ""
authors = ["Manuel Arroyo <marroyo@flameanalytics.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = " >=3.10, <3.13"
numpy = "^1.26.1"
pandas = "^2.1.2"
umap = "^0.1.1"
chromadb = "^0.4.15"
bokeh = "^3.3.0"
pysqlite3 = "^0.5.2"
pysqlite3-binary = "^0.5.2.post1"
umap-learn = "^0.5.4"
requests = "^2.31.0"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
